--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -24,13 +24,13 @@
 }}
 '''Паасонен Хейкки''' ({{lang-fi|Heikki Paasonen}}, [[1865]] [[якшамковонь 2 чи]] [[Миккели ош]] — [[1919]] [[умарьковонь 24 чи]] [[Хельсинки ош]]) — келень содый-теий, фольклорист, омбо масторонь кельс ютавтыця. 
 
-Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош|Миккели ошсо]] 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1888) сыргась эрьзятнень-мокшотнень юткс фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 аволь ськамонзо, ульнесь лездыцянзояк.
+Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош|Миккели ошсо]] 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1888) сыргась эрьзятнень-мокшотнень юткс фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 иетнестэ аволь ськамонзо, ульнесть лездыцянзояк.
 
-1889—1890 иетнестэ пурнась велетнева [[Эрзя|эрзятнеде]] ды [[мокшот]]неде материал. 1898—1902 иетнестэ эрзятнень ютксо, истяжо [[марить|маринь]], татаронь-мишарень, хантонь ютксо. Пурныль эрьва мезе [[Суоми-угрань раськеть|суоми-угрань раськетнеде]]: эрямодост, кельдест, оршамопельдест,  истяжо явтась мель [[Ветькень кель|ветькень келентень]]. [[Эрзянь кель|Эрзянь]] ды [[Мокшонь кель|мокшонь]] кельтнесэ мусь 20-те ламо кезэрень ветькень валт. Учёноенть меленть коряс, неть валтнэ совавсть эрзянь ды мокшонь кельтнес  [[XIII пинге|XIII пингеденть]] икеле. 
+1889—1890 иетнестэ пурнась велетнева [[Эрзя|эрзятнеде]] ды [[мокшот]]неде материал. 1898—1902 иетнестэ эрзятнень ютксо, истяжо [[марить|маринь]], татаронь-мишарень, хантонь ютксо. Пурнась эрьва мезе [[Суоми-угрань раськеть|суоми-угрань раськетнеде]]: эрямодост, кельдест, оршамопельдест,  истяжо явсь мель [[Ветькень кель|ветькень келентень]]. [[Эрзянь кель|Эрзянь]] ды [[Мокшонь кель|мокшонь]] кельтнестэ мусь 20-те ламо кезэрень ветькень валт. Учёноенть мелензэ коряс, неть валтнэ совавсть эрзянь ды мокшонь кельтнес  [[XIII пинге|XIII пингеденть]] икеле. 
 
-Кода келень ванкшныця ваннось эрьва-кодат малавиксэнь кевкстемат [[Суоми-угрань кельть|суоминь-угрань кельтнень]],  сюлмавкст суоми-угрань ды тюрконь кельтнесэ, сынст вайгельксэнь касомаст. [[1908 ие]]стэ нолдась {{Коцт|Мадяронь Мастор|1867}}[[Мадяронь Мастор|Мадярсо]] [[Ветькень кель|ветьке]]-[[Мадьяронь кель|мадяро]]-немецень валкс, конатась турецень кельс ютавтозель ды нолдазь ульнесь Стамбул ошсо, 1974 иестэ одс нолдазь [[Мадьяронь Мастор|Мадярсо]]. 
+Кода келень ванкшныця ваннось эрьва-кодат малавикс кевкстемат [[Суоми-угрань кельть|суоминь-угрань кельтнестэ]],  сюлмавкст суоми-угрань ды тюрконь кельтнень ютксто, сынст вайгельксэнь касомаст. [[1908 ие]]стэ нолдась {{Коцт|Мадяронь Мастор|1867}}[[Мадяронь Мастор|Мадярсо]] [[Ветькень кель|ветьке]]-[[Мадьяронь кель|мадяро]]-немецень валкс, конатась турецень кельс ютавтозель ды нолдазель Стамбул ошсо, 1974 иестэ одс нолдазь [[Мадьяронь Мастор|Мадярсо]]. 
 
-Хейкки Паасонен — Гельсингсфорской университетэнь профессор, лингвист. Сон содылинзе эрзянь ды мокшонь кельтненьгак. Профессорось пурнась эрзянь ды мокшонь ёвтазь валсо раськень шкинемазо сюпав материалт. Россияв эрямонзо перть ученоесь тейнесь [[4 (ловома вал)|ниле]] экспедицият. [[1 (ловома вал)|Васенце]] экспедициясь ютавтозель [[1888 ие]]стэ. Ваннозельть-тонавтнезельть неень [[Ковёлбуе|Ковёлбуень]], [[Инесаро буе|Инесаронь]] ды [[Чаунзабуе|Чаунзань]] буетне. [[1890 ие]]стэ сакшнось Пензань губерниянь Спасской уездэв. [[8 (ловома вал)|Кавксо]] иень ютазь ученоесь тусь сехте покш экспедициянтень. Исследованиятне ютавтозельть Самарской губерниянь Бугульминской, Бугурусланской уездэнь эрзянь велетнесэ. Ней неть велетне совить [[Татаронь Республикась|Татарияв]], [[Самара ёнкс|Самарань ёнкссов]]. Теде мейле таго ульнесь [[Пенза ёнкс|Пензань]], [[Ульянонь ёнкс|Симбирской]] ды Казанской губерниятнесэ.
+Хейкки Паасонен — Гельсингсфорской университетэнь профессор, лингвист. Сон содылинзе эрзянь ды мокшонь кельтненьгак. Профессорось пурнась эрзянь ды мокшонь кельсэ ёвтазь раськетнень шкинемань сюпав материалт. Россияв эрямонзо перть ученоесь якась [[4 (ловома вал)|ниле]] экспедицияс. [[1 (ловома вал)|Васенце]] экспедициясь ютавтозель [[1888 ие]]стэ. Ваннозельть-тонавтнезельть неень [[Ковёлбуе|Ковёлбуень]], [[Инесаро буе|Инесаронь]] ды [[Чаунзабуе|Чаунзань]] буетне. [[1890 ие]]стэ сакшнось Пензань губерниянь Спасской уездэв. [[8 (ловома вал)|Кавксо]] иень ютазь ученоесь сыргась сехте покш экспедициянтень. Исследованиятне ютавтозельть Самарской губерниянь Бугульминской, Бугурусланской уездэнь эрзянь велетнева. Ней неть велетне совить [[Татаронь Республикась|Татарияв]], [[Самара ёнкс|Самарань ёнкссов]]. Теде мейле таго якась [[Пенза ёнкс|Пензань]], [[Ульянонь ёнкс|Симбирской]] ды Казанской губерниятнес.
 
 ==Эрзянь ды мокшонь валксонь пурныцят==
 1892-1912 иетнестэ валтнень Пензань, Тамбовонь, Саратовонь, Самарань, Цимбирень, Казанень, Уфань губерниятнева пурнасть:
