*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -26,10 +26,10 @@
 '''Евсевьев (Кобаев<ref name="fulr">[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Uchenyj_prosvetitel_pedagog_Makar_Evsevevich_Evsevev/ Финно-угорские библиотеки России. Макар Евсевьевич ЕВСЕВЬЕВ]{{ref-ru}}</ref>) Макар Евсевьевич'''  ([[1864]] [[якшамковонь 18 чи]], [[Цярмун (Ветькень Республика)|Цярмун]] - [[1931]] [[панжиковонь 10 чи]] [[Саранск]]) — васеньце<ref name="fulr" /> содавикс [[эрзят|эрзянь ломанень]] тонавтыця, наукань келень содый-теий докторось (1921). Эрзя.
 
 ==Эстедензэ==
-Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> ([[рузонь кель|рузокс]] ''Малые Кармалы'', [[ветькень кель|чуважокс]] ''Ирçе Çармăс''),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, те ёжомарямось ванстови мейле эрямонзо перть.
-1872-це иестэ Макаронь максызь тонавтнеме Шераутонь ушодкс школас, Цярмунонть эйстэ сисем вайгельпеть. Тонавтнесь вадрясто. Вана кодамо питне марто прядызе цёрынесь те школанть. Чуважтнэнь коест коряс Макаронь фамилиянзо сёрмадызь тетянзо лемсэ. Истя Макар Кобаев теевсь Евсевьевекс.
+Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> ([[рузонь кель|рузокс]] ''Малые Кармалы'', [[ветькень кель|чуважокс]] ''Ирçе Çармăс''),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, ды те ёжомарямось ванстови мейле эрямонзо перть.
+1872-це иестэ Макаронь максызь тонавтнеме Шераутонь ушодкс школас, Цярмунонть эйстэ сисем вайгельпеть. Тонавтнесь вадрясто. Вана кодамо питне марто прядызе цёрынесь те школанть. Чуважтнэнь койсэ Макаронь фамилиязо сёрмадовсь тетянзо лемсэ. Истя Макар Кобаев теевсь Евсевьевекс.
 
-1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо [[рузонь кель|рузокс]], [[печкасонь кель|татарокс]], [[ветькень кель|чуважокс]]. Содась лия кельтькак.
+1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды сонзэ саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо [[рузонь кель|рузокс]], [[печкасонь кель|татарокс]], [[ветькень кель|чуважокс]]. Содась лия кельтькак.
 
 Семинариясо тонавтнемстэ уш кармась Макар Евсевьевич фольклоронь пурнамо, седе мейле, зярдо сон важодсь тонавтыцякс, кизэнь каникуласто саиль мартонзо фотоаппарат ды туиль эрзянь ды мокшонь велетнева якамо. Книжказонзо сёрмадылинзе чуросто вастневиця валтнэнь, сёрмадсь морот, ёвкст, урнемат, лайшемат. Пурнась кезэрень викшнезь панарт, пулайть, пангот, руцят, карсемапельть.
 
@@ -42,11 +42,11 @@
 
 Макар Евсевьевич сеедьстэ лездась понгомс тонавтнеме семинарияс велень эйкакштненень. Сонзэ лезксэнзэ вельде Казанень тонавтыцянь семинариянть прядызь З.Ф. Дорофеев, Е.В. Скобелев, И.Я. Бондяков, П.С. Глухов, И.Ф. Прокаев, Л.П. Кирюков, И.П. Кривошеев, С.Г. Потапкин, Т.И. Данилов, М.И. Наумкин, В.П. Ямушкин, И.И. Московкин ды лият. Неть ломантне аштесть эрзянь ды мокшонь литературань ды журналистикань, наукань ды просвещениянь, музыкань ды педагогикань ушодкссо.
 
-М.Е.Евсевьев бажась – ливтемс эрзятнень ды мокшотнень чоподачистэнть. Лиякс меремс, сынст тонавтомс ловномо, сёрмадомо – эсь сельмесэ ванномс мода-масторонть лангс.
+М.Е.Евсевьев бажась ливтемс эрзятнень ды мокшотнень чоподачистэнть. Лиякс меремс, сынст тонавтомс ловномо, сёрмадомо, эсь сельмесэ ванномо мода-масторонть лангс.
 Макар Евсевьевич наукань тевензэ кармась топавтомо 1880-це иетнестэ. Се шкастонть саезь сон весе эрямонзо алтызе наукань ды тонавтомань тевентень.
 
 Васняяк сон ушодсь домкасто тонавтнеме эрзянь келенть. Лиснесь истя: эрьва велесэ кортыть эсест койсэ, лиясто мик эрзятне вейкест-вейкест аволь допрок чарькодсть.
-Макар Евсевьевич лездась А.Ф. Юртовнень « Образцы мордовской народной словесности. Песни на эрзянском и некоторые на мокшанском наречии» (1882) ды «Образцы мордовской народной словесности. Сказки и загадки на эрзянском наречии мордовского языка с русским переводом» (1883) книгатнень анокстамосо ды нолдамосо. А уш «Образецтнэнь…» - мокшонь морот - педе-пес пурнынзе сонсь. Сынь лиссть 1896-це иестэ.
+Макар Евсевьевич лездась А.Ф. Юртовнень « Образцы мордовской народной словесности. Песни на эрзянском и некоторые на мокшанском наречии» (1882) ды «Образцы мордовской народной словесности. Сказки и загадки на эрзянском наречии мордовского языка с русским переводом» (1883) книгатнень анокстамосо ды нолдамосо. А уш «Образецтнэнь…» - мокшонь моротнень - педе-пес пурнынзе сонсь. Сынь лиссть 1896-це иестэ.
 
 Макар Евсевьевич анокстась ды нолдась эрзянь ды мокшонь кельтнесэ букварть<ref name="МРОКМ им. И.Д. Воронина_Буквари М.Е. Евсевьева">[http://www.mrkm.ru/news/?id=422  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Буквари М.Е. Евсевьева] {{ref-ru}}</ref> ([[1892]], [[1897]]). Топавтозь сынь рузонь графиканть лангс нежедезь. Зярыя уроконь ютазь, авторось максы рузонь валт, максы сынст ютавтомаст тиринь кельс. Истя мельсэ кирдевить 200 ламо рузонь валт; букваренть омбоце пельксэзэ – рузонь. Тесэ максовить рузонь алфавитэсь, лотксема тешкстнэ, цифратне, стакасто ёвтавиця гайттне ды гайттнень сюлмавкстнэ… Букваресь сёрмадозь чарькодевиця кельсэ, эйзэнзэ совавтозь морот, ёвкст, валмеревкст, содамоёвкст.
 Макар Евсевьевич ютавты эрзянь кельс «Рассказы о двунадесятых праздниках» ды «Крещение Руси при святом князе Владимире» (1889). 1910-це иестэ нолдызе «Евангелиянь» ютавксонть.
@@ -54,7 +54,7 @@
 1896-це иестэ Макар Евсевьевич васенцеде якась этнографиянь экспедицияс. Сон ульнесь [[Алоошонь ёнкс|Нижней Новгородонь]], [[Пенза ёнкс|Пензань]], [[Ульянонь ёнкс|Симбирень]], [[Томбамонь ёнкс|Тамбовонь]] ёнкстнесэ. Кода [[суомить|финнэнь]] стипендиат, пурнась келень, раськень шкинемань ды этнографиянь материал, кона совась [[Паасонен Хейкки|Х. Паасоненнэнь]] 7-це ды 8-це томтнес.
 
 [[File:Bust Makar Evsevjev.JPG|thumb|350px|left|Макар Евсевьевэнь кеврунгозо [[Мордовиянь государственной педагогической институт М. Е. Евсевьевэнь лемсэ]], [[Саран ош]]со]]
-Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явась свадьбантень. Те домка мелесь чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызеть Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ прок покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историянзо, эрямонзо ды культуразо<ref name="ГТРК «Мордовия»">[http://mordoviatv.ru/m-e-evseveven-erzyan-svadba-knigan-yubileenten-k-yubileyu-knigi-erzyanskaya-svadba-m-e-evseveva-erzya/ ФГУП ГТРК «Мордовия» М.Е.Евсевьевень «Эрзянь свадьба» книгань юбилеентень. ]{{ref-myv}}</ref>.
+Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явсь свадьбантень. Те домка мелесь чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызе Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историязо, эрямозо ды культуразо<ref name="ГТРК «Мордовия»">[http://mordoviatv.ru/m-e-evseveven-erzyan-svadba-knigan-yubileenten-k-yubileyu-knigi-erzyanskaya-svadba-m-e-evseveva-erzya/ ФГУП ГТРК «Мордовия» М.Е.Евсевьевень «Эрзянь свадьба» книгань юбилеентень. ]{{ref-myv}}</ref>.
 Кода сёрмадыль сонсь М.Е. Евсевьев:   
 {{Цитатань ушодома}}
 «[[Эрзянь полань саема|Свадьбань]] поэзиянть мон сёрмадыять Ирина Петровна авам пельде 80 иетнестэ. Симбирской губерниянь Буинской уездэнь М. Кармалы велесэ».<ref>Тиринь кель 8 класс. 21 л.{{ref-myv}}</ref>»
@@ -62,7 +62,7 @@
 Россиянь келес эсь прядонзо Макар Евсевьевич васенцеде яволявтсь «Эрзянь свадьбасонзо», кона лиссь 1892-1893-це иетнестэ «Живая старина» журналсонть.  «Эрзянь свадьба» книгась лись 1931-це<ref name="ГТРК «Мордовия»" /> иестэ. 
 
 1912-це иестэ М.Е. Евсевьевень кочкизь Рузонь географиянь обществань членэкс - сотрудникекс. Кавто иень ютазь сонзэ совавтызь Казанень университетэнь археологиянь, историянь ды этнографиянь вейсэндявксос. Учёноенть сёрмадовксонзо лиснесть Россиянь покш ковставкстнэсэ-журналтнэсэ, кулялопатнесэ. Сынь тешкстазельть Рузонь географиянь вейксэндявксонь сырнень медальсэ. Истя «онкстазельть» этнографиянь материалтнэ, конат кучнокшнозельть этнографиянь отделенияв.
-Куроксто сон кундась фольклоронь ды этнографиянь, эрзятнень эрямодост материалонь пурнамонь тевентень. Тейнесь эрямосто саезь ламо-ламо снимкат. Сехте вечкевикстнэнь кучинзе Парижень раськеютконь выставкав. Те важодевксэнть кисэ сонензэ макссть сырнень медаль.
+Куроксто сон кундась фольклоронь ды этнографиянь, эрзятнень эрямодост материалонь пурнамонь тевентень. Тейнесь эрямосто саезь пек ламо снимкат. Сехте вечкевикстнэнь кучинзе Парижень раськеютконь выставкав. Те важодевксэнть кисэ сонензэ макссть сырнень медаль.
 
 1919–це иестэ саезь 1929–це иес сон важоди Татариянь центральной музейсэ. Теде башка ловны лекцият [[эрзянь кель]]денть, этнографиядо, историядо Казанень Чилисема ёнксонь-педагогиянь ды Коммунизмань университетсэ. Теке шкастонть сонзэ лезксэнзэ вельде панжовить: васенце мордовской учительской семинария – Мачкасс велесэ (Саратовонь губерния, [[1918]]), тонавтыцянь семинария – В. Толкан велесэ (Самарань губерния), Педагогикань курсат – [[Москов]]со, косо ютасть «переподготовка» эрзянь ды мокшонь тонавтыцятне. Курстнэнь прявтокс ды пурныцякс ульнесь Ф.Ф. Советкин.
 
