*Empty MediaWiki Message*

--- a/Симкина_веле_(Покш_Килейбуе).mw
+++ b/Симкина_веле_(Покш_Килейбуе).mw
@@ -74,7 +74,7 @@
 
 ==Содавикс ломанть те велестэнть==
 Симкина велесэ чачсть:
-* [[Ишуткинэнь Николай]] — содавикс эрзянь валморозей, [[«Чилисема» (журнал)|«Чилисема» ковставксонть]] прявт редактор
+* [[Ишуткинэнь Николай]]<ref name="Библиотека_Ишуткин">[http://www.lib.e-mordovia.ru/Library/?Char=%C8&id=2 Библиотека Мордовской Литературы. Ишуткин Николай Иванович]{{ref-ru}}</ref> — содавикс эрзянь валморозей, [[«Чилисема» (журнал)|«Чилисема» ковставксонть]] прявт редактор
 * И. П. Адушкин, Н.В. Зинов — Советэнь Союзонь Маралят ({{Lang-ru|Герои Советского Союза}})
 * В.И. Богатов —  ({{Lang-ru|заслуженный работник народного образования Республики Мордовия}}) 
 * Н.Я. Назаркин — врач 
