*Empty MediaWiki Message*

--- a/«Чилисема»_(журнал).mw
+++ b/«Чилисема»_(журнал).mw
@@ -5,7 +5,7 @@
 Лисни эрьва [[Ков|ковсто]]. Нолдави 1931-це иень [[Сундерьков|сундерьковсто]] саезь. 1991-це иень [[Якшамков|якшамковкс]] — «Пионерэнь вайгель». Чилисема ковставксось содавты эсензэ ловныцятнень эрзянь [[Сёрмадей|сёрмадейтнень]] шкинемаст ды эрямо кист марто; ёвтни школань эрямодонть, чачома ёнкстонть, Мордовиянть томбале эриця эрзятнень уцяскадост, сехте вишкинетнень туртов максни [[Валморо|валморот]], [[Ёвтнемат|ёвтнемат]], печаты эсест сёрмадовксосткак; тонавты эйсэст тиринь раськень койтнесэ [[Викшнема|викшнеме]], [[Пидема-панема|пидеме-панеме]], вадрясто сёрмадомо.
 
 == «Чилисема»-нь редакциясь ==
-* [[Ишуткин, Николай Иванович|Ишуткин Н. И.]] — прявт-редакторось
+* [[Ишуткин, Николай Иванович|Ишуткин Н. И.]]<ref name="Финноугория">[http://www.finnougoria.ru/community/press/478/3064 ИЦ «Финноугория». Детский журнал на эрзянском языке ЧИЛИСЕМА (ВОСХОД СОЛНЦА)]{{ref-ru}}</ref>  — прявт-редакторось
 
 === Редационной коллегиясь ===
 * [[Абрамов, Кузьма Григорьевич|Абрамов К. Г.]]
@@ -24,6 +24,9 @@
 
 == Невтевкст ==
 * Интернет вельде [http://chilisema.ru/ Чилисема] ковкставксонть лопазо. 
+
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь кель|Ч]]
 [[Category:Эрзянь келень кулялопат|Ч]]
