--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -55,11 +55,11 @@
 * Die sogenannten Karataj-mordwinen oder Karatajen. SUSA 21:1. Helsinki 1903.
 * Mordvinishe lautlehre. SUST 22 XVI. Helsinki 1903.
 * Mordwinische Chrestomathie mit Glossar und grammatikalischem Abriss. Helsingfors 1909.
-* Mordvalaisten mytologia. (Die Mythologie der Mordwinen.) Tietosanakirja 6. Helsinki 1914. P 692 - 699.
-* Mordwinische Volksdichtung. Herausgeg. u. ubers. von Paavo Ravila. I. Band. SUST 77. Helsinki 1938.
-* Mordwinische Volksdichtung. Herausgeg. u. ubers. von Paavo Ravila. II. Band. SUST 81. Helsinki 1939.
-* Mordwinische Volksdichtung. Herausgeg. u. ubers. von Paavo Ravila. III. Band. SUST 84. Helsinki 1941. 
-* Mordwinische Volksdichtung. Herausgeg. u. ubers. von Paavo Ravila. IV. Band. SUST 91. Helsinki 1947
+* Mordvalaisten mytologia. [Die Mythologie der Mordwinen.] Tietosanakirja 6. Helsinki 1914. P 692 - 699.
+* Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. I. Band. SUST 77. Helsinki 1938.
+* Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. II. Band. SUST 81. Helsinki 1939.
+* Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. III. Band. SUST 84. Helsinki 1941. 
+* Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. IV. Band. SUST 91. Helsinki 1947
 * Mordwinische Volksdichtung V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung VII. Band. SUST 176. Helsinki 1980, Suomalais-Ugrilainen Seura.
