/* Содавикс ломанть те велестэнть */

--- a/Польдяз_(Пейкужо_буе).mw
+++ b/Польдяз_(Пейкужо_буе).mw
@@ -67,10 +67,10 @@
 Лемесь– антропоним: '''Полдась'''-'''Подляс'''<ref name="Память, запечатленная в слове"/>.
 
 == Содавикс ломанть те велестэнть ==
-* А.Ф. Ежов — сёрмадей
+* [[Ежов, Анатолий Федорович|Анатолий Федорович Ежов]]<ref name="Библиотека_Ежов">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=1 Библиотека Мордовской Литературы. Ежов Анатолий Федорович]{{ref-ru}}</ref> — сёрмадей
 * Н.Ф. Ежов — Мордовиянь ГИБДД-нь прявт 
 * П.Ф. Ежов — полковник
-* М.Щукин — лётчик-испытатель  
+* М.Щукин — лётчик-испытатель
 
 == Веленть эрямозо  ==
 == Сёрм.: ==
