--- a/Кочкурвеле_(Тумобуе).mw
+++ b/Кочкурвеле_(Тумобуе).mw
@@ -74,9 +74,9 @@
  {{Ref-myv}}</ref>— тонавтыця,  кулянь-сёрмадей, МАССР-нь заслуженной тонавтыця, СССР-нь раськень тонавтыця, Ине Отечественной ойнань улиця.
 * [[Скобелев, Елисей Васильевич|Елисей Скобелев]]<ref name="МРОКМ им. И.Д. Воронина_К 125-летию">[http://www.mrkm.ru/news/?id=371  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 125-летию со дня рождения Скобелева Елисея Васильевича.] {{ref-ru}}</ref> — тонавтыця, МАССР-нь заслуженной тонавтыця
 * Я.С. Слушкин<ref>[http://www.d-petrovka.edurm.ru/index.php/component/phocadownload/category/1-ofitsialnye-dokumenty?download=20:muzejnaya-pedagogika-shkoly-v-stanovlenii-grazhdanstvennosti-uchashchikhsya  МОУ «Кочкуровская средняя общеобразовательная школа» являлась республиканской экспериментальной площадкой, работающей по теме «Музейная педагогика школы в становлении гражданственности учащихся» ] {{Ref-ru}}</ref>— сёрмадей («Семья Кочкуровых» романось, ды ёвксонь пурнавкс «Сильные люди»)
-* [[Дергачёвонь Любовь|Л.Ф. Дергачёва]]<ref>[http://portal.do.mrsu.ru/community_events_people/people/?id=2306 Кто есть кто в финно-угорском мире: Любовь Федоровна Дергачева] {{Ref-ru}}</ref>— валморозей
-* Виктор Александрович Дырин— артыця-тонавтыця
-* [[Дырин, Юрий Александрович|В.Ю. Дырин]]<ref>[http://arts.in.ua/artists/Durin/ Arts.In.UA Дырин Юрий Александрович ] {{Ref-ru}}</ref>— артыця, этнофутуролог
+* [[Дергачёвонь Любовь|Любовь Федоровна Дергачёва]]<ref>[http://portal.do.mrsu.ru/community_events_people/people/?id=2306 Кто есть кто в финно-угорском мире: Любовь Федоровна Дергачева] {{Ref-ru}}</ref><ref name="Библиотека_Дергачева">[http://www.lib.e-mordovia.ru/Library/?Char=%C4&id=1 Библиотека Мордовской Литературы. Дергачева Любовь Федоровна]{{ref-ru}}</ref> — валморозей
+* Виктор Александрович Дырин — артыця-тонавтыця
+* [[Дырин, Юрий Александрович|В.Ю. Дырин]]<ref>[http://arts.in.ua/artists/Durin/ Arts.In.UA Дырин Юрий Александрович ] {{Ref-ru}}</ref> — артыця, этнофутуролог
 == Веленть эрямозо  ==
 == Лисьм.: ==
 <references />
