/* Самара ёнксонь содавикс эрзятне «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ{{Ref-myv}} */

--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -70,28 +70,28 @@ MSKS=+1|
 * [[Якстереармиянь буе Самарань ёнксcо|Якстереармиянь буе]] ({{lang-ru|Красноармейский район}})
 
 == Самара ёнксонь содавикс эрзятне<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>== 
-#  [[Батаевень, Павел Петрович|Батаев Павел Петрович]] (1915, [[Од Пиче веле (Клявля буе)|Новые Сосны]] Бугурусланонь уезд Самарань губерния — 1942, г.Медынь Смоленской обл.). Эрзянь валморозей, куляньсёрмадей.
-#  [[Боров, Михаил Романович|Боров Михаил Романович]] (1896, [[Якстере Лисьмапрят (Похвистнева буень)|Архангельские Ключи]] Самарань губ. — 1941, [[Киев ош]]). Эрзянь бороциця, Россиянь чемпион.
-#  [[Втулкин, Михаил Алексеевич|Втулкин Михаил Алексеевич]] (1929 — 1991). Эрзянь сёрмадыця, валморозей, прозаик, куляньсёрмадей.
-#  Дорогойченко (Дорогойченков) Алексей Яковлевич (1894 — 1947). Прозаик, валморозей, публицист, критик.
-#  [[Дуняшин, Алексей Васильевич|Дуняшин Алексей Васильевич]] (1904, [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] -1931, Самар ош). Эрзянь прозаик, публицист, критик.
-#  [[Журавлёвонь, Числав Григорьевич|Журавлёв Числав Григорьевич]] (1935). Эрзянь сёрмадыця, валморозей, Россиянь сёрмадеень вейсендявксов совиця.
-#  [[Инжеватов, Иван Корнилович|Иван Корнилович Инжеватов]] (1911 Кирюшкино веле<ref name="Библиотека_Инжеватов">[http://www.lib.e-mordovia.ru/Library/?Char=%C8&id=1 Библиотека Мордовской Литературы. Инжеватов Иван Корнилович]{{ref-ru}}</ref> Бугурусланонь уезд Самарань губерния - 1996) Эрзянь литературовед, критик, этнограф-топонимист, филологической наукань кандидат (1953), Мордовия Республикань Государственной премиянь лауреат (1997).
-#  Инчин Анатолий Иванович (1918 — 1997, Самар ош). Эрзянь валморозей, прозаик, куляньсёрмадей.
-#  Кавтаськин Лука Семёнович (1911, [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] — 1977, Саранск). Содавикс эрзянь фольклорист, ютавтыця, литературовед, критик, фил.наукань кандидат (1953), Мордовиянь культурань заслуженной важодиця (1976), СССР-нь Сёрмадеень вейсендявксонь совиця (1948).
-#  [[Кадышень, Надежда Никитична|Кадышева Надежда Никитична]] (1959). Морыця, Россиянь Заслуженной артистка (1993), Мордовия Республикань народной артистка (1995).
-#  [[Кириллов, Пётр Семёнович|Кириллов Петр Семёнович]] (1910 — 1955). Эрзянь валморозей, прозаик, драматург, ютавтыця.
-#  [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]] (1910 — 1991) Эрзянь валморозей, прозаик, куляньсёрмадей, СССР-нь сёрмадеень вейсендявксонь совиця (1935).
-#  [[Люлякинань, Серафима Марковна|Люлякина Серафима Марковна]] (1922 — 1993). Эрзянь сказительница, моронь ладсиця, Мордовиянь Государственной премиянь лауреат (1992).
-#  [[Моро Артур|Артур Моро (Осипов Афанасий Матвеевич)]]<ref name="ГБУ РК_Моро">[http://www.nbrkomi.ru/page/2925/ ГБУ РК «Национальная библиотека Республики Коми»: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> (1909 — 1989). Эрзянь валморозей.
-#  Дмитрий Морской (Малышев Дмитрий Ивановичень) (1897 — 1956). Эрзянь валморозей, прозаик.
-# [[Петрова, Ксения Семёновна|Ксения Петрова]]<ref name="Библиотека_Петрова">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=3 Библиотека Мордовской литературы. Петрова Ксения Семеновна] {{ref-ru}}</ref> (1892, [[Бугуруслан ош]], Самарань губ. — 1942, Ташто Пиче веле, Клявля буень, Куйбышевэнь ёнкс). Драматург.
-#  [[Раптанов, Тимофей Алексеевич|Раптанов Тимофей Алексеевич]] (1906 — 1936). Эрзянь сёрмадыця, прозаик, журналист.
-#  [[Радаев, Василий Кузьмич|Радаев Василий Кузьмич]] (1907 [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буень]] [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref> — 1991). Покш эрзянь валморозей, СССР-нь сёрмадеень вейсендявксонь совиця (1966), Мордовиянь Государственной премиянь лауреат (1979), раськень сёрмадей.
-#  Ревизов Николай Егорович (1927 — 2004). Эрзянь валморозей, фотоартыця, куляньсёрмадей, Мордовия Республикань Государственной премиянь лауреат (1994).
-#  Сетин Фёдор Иванович (1919, Захарка веле ней [[Сергиень буе Самарань ёнксcо|Сергиень буе]] Самарань ёнкс — 2003). Эрзянь литературовед, филологической наукань доктор (1978), профессор (1979).
-#  Тимофеев Роман Тимофеевич (1924). Эрзянь валморозей. Россиянь Сёрмадеень вейсендявксос совиця.
-#  Чувашев Михаил Иванович (1909, [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят веле]] Бугурусланонь уезд Самарань губерния — 1973, Шантала веле Шенталань буень Куйбышевень ёнкс). Эрзянь фольклорист.
+#  [[Батаевень, Павел Петрович|Батаев Павел Петрович]] ([[1915]], [[Од Пиче веле (Клявля буе)|Новые Сосны]] Бугурусланонь уезд Самарань губерния — [[1942]], г.Медынь Смоленской обл.). Эрзянь валморозей, куляньсёрмадей.
+#  [[Боров, Михаил Романович|Боров Михаил Романович]] ([[1896]], [[Якстере Лисьмапрят (Похвистнева буень)|Архангельские Ключи]] Самарань губ. — [[1941]], [[Киев ош]]). Эрзянь бороциця, Россиянь чемпион.
+#  [[Втулкин, Михаил Алексеевич|Втулкин Михаил Алексеевич]] ([[1929]] — [[1991]]). Эрзянь сёрмадыця, валморозей, прозаик, куляньсёрмадей.
+#  [[Дорогойченко, Алексей Яковлевич|Дорогойченко (Дорогойченков) Алексей Яковлевич]] ([[1894]] Покш Каменка<ref name="Библиотека_Дорогойченко">[http://www.lib.e-mordovia.ru/Library/?Char=%C4&id=2 Библиотека Мордовской Литературы. Дорогойченко (Дорогойченков) Алексей Яковлевич]{{ref-ru}}</ref>, Ёлхань буе Самарань ёнкс — [[1947]] [[Куйбышев ош]]). Прозаик, валморозей, публицист, критик.
+#  [[Дуняшин, Алексей Васильевич|Дуняшин Алексей Васильевич]] ([[1904]], [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] -[[1931]], Самар ош). Эрзянь прозаик, публицист, критик.
+#  [[Журавлёвонь, Числав Григорьевич|Журавлёв Числав Григорьевич]] ([[1935]]). Эрзянь сёрмадыця, валморозей, Россиянь сёрмадеень вейсендявксов совиця.
+#  [[Инжеватов, Иван Корнилович|Иван Корнилович Инжеватов]] ([[1911]] Кирюшкино веле<ref name="Библиотека_Инжеватов">[http://www.lib.e-mordovia.ru/Library/?Char=%C8&id=1 Библиотека Мордовской Литературы. Инжеватов Иван Корнилович]{{ref-ru}}</ref> Бугурусланонь уезд Самарань губерния - [[1996]]) Эрзянь литературовед, критик, этнограф-топонимист, филологической наукань кандидат (1953), Мордовия Республикань Государственной премиянь лауреат (1997).
+#  Инчин Анатолий Иванович ([[1918]] — [[1997]], Самар ош). Эрзянь валморозей, прозаик, куляньсёрмадей.
+#  Кавтаськин Лука Семёнович ([[1911]], [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] — [[1977]], Саранск). Содавикс эрзянь фольклорист, ютавтыця, литературовед, критик, фил.наукань кандидат (1953), Мордовиянь культурань заслуженной важодиця (1976), СССР-нь Сёрмадеень вейсендявксонь совиця (1948).
+#  [[Кадышень, Надежда Никитична|Кадышева Надежда Никитична]] ([[1959]]). Морыця, Россиянь Заслуженной артистка (1993), Мордовия Республикань народной артистка (1995).
+#  [[Кириллов, Пётр Семёнович|Кириллов Петр Семёнович]] ([[1910]] — [[1955]]). Эрзянь валморозей, прозаик, драматург, ютавтыця.
+#  [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]] ([[1910]] — [[1991]]) Эрзянь валморозей, прозаик, куляньсёрмадей, СССР-нь сёрмадеень вейсендявксонь совиця (1935).
+#  [[Люлякинань, Серафима Марковна|Люлякина Серафима Марковна]] ([[1922]] — [[1993]]). Эрзянь сказительница, моронь ладсиця, Мордовиянь Государственной премиянь лауреат (1992).
+#  [[Моро Артур|Артур Моро (Осипов Афанасий Матвеевич)]]<ref name="ГБУ РК_Моро">[http://www.nbrkomi.ru/page/2925/ ГБУ РК «Национальная библиотека Республики Коми»: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> ([[1909]] — [[1989]]). Эрзянь валморозей.
+#  Дмитрий Морской (Малышев Дмитрий Ивановичень) ([[1897]] — [[1956]]). Эрзянь валморозей, прозаик.
+# [[Петрова, Ксения Семёновна|Ксения Петрова]]<ref name="Библиотека_Петрова">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=3 Библиотека Мордовской литературы. Петрова Ксения Семеновна] {{ref-ru}}</ref> ([[1892]], [[Бугуруслан ош]], Самарань губ. — [[1942]], Ташто Пиче веле, Клявля буень, Куйбышевэнь ёнкс). Драматург.
+#  [[Раптанов, Тимофей Алексеевич|Раптанов Тимофей Алексеевич]] ([[1906]] — [[1936]]). Эрзянь сёрмадыця, прозаик, журналист.
+#  [[Радаев, Василий Кузьмич|Радаев Василий Кузьмич]] ([[1907]] [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буень]] [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref> — [[1991]]). Покш эрзянь валморозей, СССР-нь сёрмадеень вейсендявксонь совиця (1966), Мордовиянь Государственной премиянь лауреат (1979), раськень сёрмадей.
+#  Ревизов Николай Егорович ([[1927]] — [[2004]]). Эрзянь валморозей, фотоартыця, куляньсёрмадей, Мордовия Республикань Государственной премиянь лауреат (1994).
+#  Сетин Фёдор Иванович ([[1919]], Захарка веле ней [[Сергиень буе Самарань ёнксcо|Сергиень буе]] Самарань ёнкс — [[2003]]). Эрзянь литературовед, филологической наукань доктор (1978), профессор (1979).
+#  Тимофеев Роман Тимофеевич ([[1924]]). Эрзянь валморозей. Россиянь Сёрмадеень вейсендявксос совиця.
+#  Чувашев Михаил Иванович ([[1909]], [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят веле]] Бугурусланонь уезд Самарань губерния — [[1973]], Шантала веле Шенталань буень Куйбышевень ёнкс). Эрзянь фольклорист.
 #  [[Юшкин, Юлиан Иванович|Юлиан Юшкин]]<ref name="МРОКМ им. И.Д. Воронина_К 120-летию Ю.И. Юшкина">[http://www.mrkm.ru/news/?id=495  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 120-летию Ю.И. Юшкина] {{ref-ru}}</ref> (Трофимовка веле Бугурусланонь уезд, Самарань губерниясо). Врач-окулист, медицинань наукань кандидат, РСФСР-нь ды МАССР-нь заслуженной врач.
 
 == Лисьм.: ==
