--- a/Польдяз_(Пейкужо_буе).mw
+++ b/Польдяз_(Пейкужо_буе).mw
@@ -61,7 +61,7 @@
 }}
 '''Польдяз'''  ({{Lang-ru|с. Подлясово}}) — [[мокшот|мокшонь]]<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/h_Podlasovo.htm Многоликая Мордовия: Село Подлясово] {{Ref-ru}}</ref> посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со.
 
-Ашти [[Вадолей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Подлясово  — 134<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Спассонь уездсэ''. 
+Ашти [[Вадолей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Подлясово  — 134<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-mdf}}, {{ref-myv}}</ref> кудот марто Спассонь уездсэ''. 
 
 == Веленть лемденть  ==
 Лемесь– антропоним: '''Полдась'''-'''Подляс'''<ref name="Память, запечатленная в слове"/>.
