--- a/Салазгерьге_(Торбейбуе).mw
+++ b/Салазгерьге_(Торбейбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 1105<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 1105<ref name="Численность ">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,9 +58,21 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Салазгерьге''' ({{Lang-ru|с. Салазгорь}}) — мокшонь веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+{{Лия смустьтне|Салазгорь (смустьтне)}}
+'''Салазгерьге<ref name="ГЕОПОРТАЛ_ с. Салазгорь">[http://geo13.ru/reestr/object/1394 Геопортал РГО:  с. Салазгорь] {{Ref-ru}}</ref>''' ({{Lang-mdf|Салазкерьге<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-mdf}}, {{ref-myv}}</ref>}}, {{Lang-ru|с. Салазгорь}}) — мокшонь<ref name="ГЕОПОРТАЛ_ с. Салазгорь"/> веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+
+Ашти [[Салазгорь лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Салазгорь – веле 399 кудот-кардазт марто Спасонь уездсэ''.}}
+{{oq|ru|В «СНМ Тамбовской губернии» (1866) – Никольское (Салазгорь), село из 399 дворов  Спасского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность "/>: [[2002 ие]]стэ ульнесь 870 лом., 2010 иень ловномасонть - 1105 ломанть. 
+
 == Веленть лемденть  ==
+Лемесь-гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-mdf}}, {{ref-myv}}</ref>.
+
 == Содавикс ломанть те велестэнть ==
+* [[Дорофеев, Захар Федорович|Захар Федорович Дорофеев]]<ref name="Библиотека_Дорофеев">[http://www.lib.e-mordovia.ru/Library/?Char=%C4&id=4 Библиотека Мордовской Литературы. Дорофеев Захар Федорович]{{ref-ru}}</ref> — сёрмадей
 * Татьяна Ивановна Панкратова - Лушкина<ref name="МРОКМ им. И.Д. Воронина_Потомственная вышивальщица">[http://www.mrkm.ru/news/?id=193  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Потомственная вышивальщица] {{ref-ru}}</ref> —содавиксэв викшниця
 == Лисьм.: ==
 <references />
