--- a/Николаень_буе.mw
+++ b/Николаень_буе.mw
@@ -2,18 +2,17 @@
 
 ==Велеть==
 ===эрзянь===
-* [[Баева (Николаень буе)|Баева]] -  {{lang-ru|Баевка}}
+* [[Андрёвка (Николаень буе)|Андрёвка]] -  {{lang-ru|Андреевка}}
+* [[Баева (Николаень буе)|Баева]] (лиякс: '''Байва''') -  {{lang-ru|Баевка}}
 * [[Валдычи (Николаень буе)|Валдычи]] 
 * [[Болдасево (Николаень буе)|Болдасево]]<ref name="Дуняшин_Рудазов ведесь">Дуняшин А. В. Рудазов ведесь чуди, Москов, ГИЖ, 1928 {{ref-myv}}</ref> - ({{lang-ru|с. Болдасьево}})
 * [[Губашево (Николаень буе)|Губашево]]   
 * [[Давыдвеле (Николаень буе)|Давыдвеле]] -  {{lang-ru|Давыдовка}}
 * [[Дубровка (Николаень буе)|Дубровка]]   
 * [[Иванцево (Николаень буе)|Иванцево]]   
-* [[Мордовский Канадей (Николаень буе)|Мордовский Канадей]]   
+* [[Мурза веле (Николаень буе)|Мурза веле]] -  {{lang-ru|Мордовский Канадей}}   
 * [[Вазвеле (Николаень буе)|Вазвеле]]  -  {{lang-ru|Телятниково}}
-* [[Федоровка (Николаень буе)|Федоровка]] 
-
-
+* [[Федоровка (Николаень буе)|Федоровка]]
 
 == Сёрм.: ==
 <references />
