*Empty MediaWiki Message*

--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -24,7 +24,7 @@
 }}
 '''Паасонен Хейкки''' ({{lang-fi|Heikki Paasonen}}, [[1865]] [[якшамковонь 2 чи]] [[Миккели ош]] — [[1919]] [[умарьковонь 24 чи]] [[Хельсинки ош]]) — келень содый-теий, фольклорист, омбо масторонь кельс ютавтыця. 
 
-Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош|Миккели ошсо]] 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1888) сыргась эрьзятнень-мокшотнень юткс фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 иетнестэ аволь ськамонзо, ульнесть лездыцянзояк.
+Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош|Миккели ошсо]] 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1889) сыргась эрьзятнень-мокшотнень юткс келень ды фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 иетнестэ аволь ськамонзо, ульнесть лездыцянзояк.
 
 1889—1890 иетнестэ пурнась велетнева [[Эрзя|эрзятнеде]] ды [[мокшот]]неде материал. 1898—1902 иетнестэ эрзятнень ютксо, истяжо [[марить|маринь]], татаронь-мишарень, хантонь ютксо. Пурнась эрьва мезе [[Суоми-угрань раськеть|суоми-угрань раськетнеде]]: эрямодост, кельдест, оршамопельдест,  истяжо явсь мель [[Ветькень кель|ветькень келентень]]. [[Эрзянь кель|Эрзянь]] ды [[Мокшонь кель|мокшонь]] кельтнестэ мусь 20-те ламо кезэрень ветькень валт. Учёноенть мелензэ коряс, неть валтнэ совавсть эрзянь ды мокшонь кельтнес  [[XIII пинге|XIII пингеденть]] икеле. 
 
@@ -49,13 +49,17 @@
 * [[Евсевьевень Макар Евсевьевич]] 
 
 ==Сёрм.:==
+* Matkakertomus mordvalaisten maalta, SUSA XVII, 3. Helsinki 1890
+* Mordvalaiset, Suomen suku II. Helsinki 1928
+* Mordvins, Encyclopaedia of religion and ethiks, edited by Jaimes Hastings, VIII. Edinburgh
 * Proben der mordwinischen Volkslitteratur. Erster Band. Erzjanischer Theil. Erstes Heft. Erzjanische Lieder. SUSA 9. XXII. Helsinki 1891.
 * Mordvinische Lautlehre. Akademische Abhandlung. Helsingfors 1893.
 * Proben der mordwinischen Volkslitteratur. Erster Band. Erzjanischer Theil. Zweites Heft. Erzjanische zauberspruche, opfergebete,räthsel,sprichwörter und märchen. SUSA 12:1. Helsinki 1894.
+* Die turkischen Lehnwörter im Mordwinischen, SUSA XV, 2. Helsinki 1897
 * Die sogenannten Karataj-mordwinen oder Karatajen. SUSA 21:1. Helsinki 1903.
 * Mordvinishe lautlehre. SUST 22 XVI. Helsinki 1903.
 * Mordwinische Chrestomathie mit Glossar und grammatikalischem Abriss. Helsingfors 1909.
-* Mordvalaisten mytologia. [Die Mythologie der Mordwinen.] Tietosanakirja 6. Helsinki 1914. P 692 - 699.
+* Mordvalaiset,mordvalaisten mytologia. [Die Mythologie der Mordwinen.] Tietosanakirja 6. Helsinki 1914. P 692 - 699.
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. I. Band. SUST 77. Helsinki 1938.
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. II. Band. SUST 81. Helsinki 1939.
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. III. Band. SUST 84. Helsinki 1941. 
