*Empty MediaWiki Message*

--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -64,8 +64,8 @@
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. II. Band. SUST 81. Helsinki 1939.
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. III. Band. SUST 84. Helsinki 1941. 
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. IV. Band. SUST 91. Helsinki 1947
-* Mordwinische Volksdichtung V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
-* Mordwinische Volksdichtung VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung VII. Band. SUST 176. Helsinki 1980, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung VIII. Band. SUST 178. Helsinki 1981, Suomalais-Ugrilainen Seura.
 * Федотов М. Р. «Исследователи чувашского языка». Чебоксары, 1987. 
