--- a/Зоринэнь_Игнатий.mw
+++ b/Зоринэнь_Игнатий.mw
@@ -1,3 +1,9 @@
-Зоринэнь Игнатий те шкас лияли мокшэрзянь литературань историяс парсте апак совавто литераторкс. Содамочись Зоринэнь эрямодо неень шкас пачкодсь пек аламо. Содазь ансяк чачома тарказо - Самарской губерниянь Бугурусланской уездэнь Сыре Вечканова эрзянь велесь. Хейкки Паасонен марто сон васенцеде вастовсь 1898 иестэ, зярдо финнэнь учёноесь сакшнось Вечкановав народной ёвксонь кочкамо ды сёрмадсь пельдензэ фольклор жанрань сядодо ламо произведения. Конатнень ютксто комсте ламотне авторскойть, эсензэ поэмат-ёвкст. Зоринэнь кодаяк а маштови явомс мокшэрзянь народной литературанть эйстэ. Сон ульнесь аволь умонь пингень сказителькс, а сёрмас-грамотас содыця поэтэкс. Ламо эсь поэманзо-ёвксонзо сон лемдинзе народной поэзиянь традиционной жанрань лемсэ-- морокс. Паасоненэнь кучозь сёрманзо эйстэ, конат те шкас вастневить Хельсинкисэ, Финно-угорской обществань архивсэ, парсте неяви: сон, кода литератор ульнесь мокшэрзянь национальной коень-традициянь чарькоди ломань, ташто пингень озномань ванстыця. Кода эсь Пазнэнь кемиця ломань, Зорин арасель христианской озномань каршо молиця ломань. Комсте ламо поэмасонзо  арась вейкеяк истямо, косо конфликттнэ улевельть сюлмавозь антихристианской идея марто. Зоринэнь "каршо молемазо" - те мокшэрзятнень национальной коень-традициянь вешнемань-ризнэмань ванстомась.
+'''Зоринэнь Игнатий''' те шкас лияли мокшэрзянь литературань историяс парсте апак совавто литераторкс. Содамочись Зоринэнь эрямодо неень шкас пачкодсь пек аламо. Содазь ансяк чачома тарказо - Самара губерниянь Бугурусланской уездэнь эрзянь [[Вечкань веле|Вечкань велесь]]. [[Паасонен Хейкки|Хейкки Паасонен]] марто сон васенцеде вастовсь 1898 иестэ, зярдо финнэнь учёноесь сакшнось Вечкань велев народной ёвксонь кочкамо ды сёрмадсь пельдензэ фольклор жанрань сядодо ламо произведения. Конатнень ютксто комсте ламотне авторскойть, эсензэ поэмат-ёвкст. Зоринэнь кодаяк а маштови явомс мокшэрзянь народной литературанть эйстэ. Сон ульнесь аволь умонь пингень сказителькс, а сёрмас-грамотас содыця поэтэкс. Ламо эсь поэманзо-ёвксонзо сон лемдинзе народной поэзиянь традиционной жанрань лемсэ-- морокс. Паасоненэнь кучозь сёрманзо эйстэ, конат те шкас вастневить Хельсинкисэ, Финно-угорской обществань архивсэ, парсте неяви: сон, кода литератор ульнесь мокшэрзянь национальной коень-традициянь чарькоди ломань, ташто пингень озномань ванстыця. Кода эсь Пазнэнь кемиця ломань, Зорин арасель христианской озномань каршо молиця ломань. Комсте ламо поэмасонзо  арась вейкеяк истямо, косо конфликттнэ улевельть сюлмавозь антихристианской идея марто. Зоринэнь "каршо молемазо" - те мокшэрзятнень национальной коень-традициянь вешнемань-ризнэмань ванстомась.
+
 Кода поэт-сказитель, Зоринэнь Игнатий эрясь и лацесь эсь поэманзо истямо пингстэ, зярдо мокшэрзятнень эрямосо сатышка виевекс ульнесть языческой умонь традициятне да парсте арасельть кемекстазь христианской озноманть юронзо. "Сыресь" и "одось" поэмасонзо пек стакасто явовить вейке-омбоценть эйстэ. Сонзэ идейно-эстетической вешнеманзо седе шождасто чарькодевить поэманзо мотивень и содержаниянь коряс. Те ёндо сонзэ поэтической сказонзо явовить колмов: Мифологической мотив марто поэмат-ёвкст ("Тынь кунсолодо, мокшот-эрзят", "Мекс кезэрень пингстэ минек коряс эрясть седе парсте", "Ташто моро", "Кода Пурьгине саизе урьвакс Вере Пазонь мазы тейтерензэ Везоргонь" и лият), конат анокстазь Тюштя пингень эрямонть шнамс; омбоце цикласонть седе парсте марявить социально-исторической мельтне-ёжотне ("Седе икеле минь эринек Пугачёвонь пингстэ", "Од цёра башкиртнэнь ютксо", "Кезэрень солдатстванть ланга моро" ды лият); башка тарка саить лирической поэманзо, конатнень юрс путозь народной моротнень мотивест ("Кода Родя поланзо микшнизе ды одов рамизе", "Моро одпорадо ды сыречиде", "Наян моро", "Симицянь моро" ды лият). Те циклантень совавтовить вечкемадо поэматне и васняяк сеть, конатнень юрост сюлмавозь од домантнень койтне-традициятне марто ды народной моротнень марто. Ташто пингстэ истямо моротнень морсилизь ансяк од ломантнень аштема кудова (Пивань кудо, Роштувань кудо, Тейтерень кудо). Секскак и народной моротнень эйсэ и Зоринэнь поэтической ёвтнеметнесэ сатышка тарка саить эротической мотивтне. Мифологической мотив марто поэманзо юрс путозь аволь сынсь мифтне, а ансяк сынст геройтнень лемтне. Весе, мезе теить Пазонь лемсэ лемдезь геройтне -- те масорлангонь ломатнень эрямост, талномаст. Мокшэрзянь мифтнэсэ ды мифологической народной моротнесэ истямо мотивт-сюжет арасть. Зоринэнь поэмасонзо те сюжетэсь --литературной и лемдемс сонзэ народной моронь сюжетэкс а маштови. Текень сави ёвтамс и "Цёрась паро Левонтей" поэманть коряс. Сонзэ сюжетэзе аволь мифологической, но и кода Пургине ланга поэмасо, сюлмазь мифологической мотив марто.
+
 Омбоце циклань поэмасонзо,конат сюлмавозь социально-исторической тема марто, башка мель саи поэмазо "Седе икеле эринек минь Пугачёвонь пингстэ". Се, мезде корты Аника атя, моли каршо сеть содамочитнеде Пугачёвдо, конат лацевсть ланганзо советской пингень историясо и художественной произведениятнесэ. Аволь стяко Зоринэнь те поэмась Паасоненэнь сборникте башка вестькак и косояк эзь печатавкшно. "Пугачёвонь пингстэ, -- сёрмады Зорин поэманть ушодксо, минь ламо нужа неинек, сельмеведь ламо валынек, эсенек азоромок арасель, хоть и рузонь азор ульнесь. Аволь маласо сон эрясь, кисэнек эзь ризнэ". Игнатий Зоринэнь творчествасо неявикс тарка саить од ломанень бытовой темадо сермадозь лирической поэманзо. Сыненст кода и лия циклань поэмазонзо совавтозь мокшэрзянь койтнень-традициятнень кисэ ризнэмась. Но нетне ёвкстнэнь сюжетсэ сеетьстэ вастневи пеедькшнема, а таркат-таркат и поэтической сатирань тюс.
+
+==Сёрм.:==
+* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
