--- a/Зоринэнь_Игнатий.mw
+++ b/Зоринэнь_Игнатий.mw
@@ -7,3 +7,6 @@
 ==Сёрм.:==
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
+
+
+[[Category:Эрзянь ломанть|З]]
